added board layout in xaml

--- a/src/Cecs475.BoardGames.Chess.WpfView/UserControl1.xaml
+++ b/src/Cecs475.BoardGames.Chess.WpfView/UserControl1.xaml
@@ -5,8 +5,27 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Cecs475.BoardGames.Chess.WpfView"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             d:DesignHeight="400" d:DesignWidth="400">
+    <UserControl.Resources>
+        <local:ChessViewModel x:Key="vm"/>
+    </UserControl.Resources>
+
+
+    <ItemsControl x:Name="BoardPositions" DataContext="{StaticResource vm}"
+                  ItemsSource="{Binding Squares}">
+
+        <ItemsControl.ItemsPanel>
+            <ItemsPanelTemplate>
+                <UniformGrid Columns="8" Rows="8" Background="Green"/>
+            </ItemsPanelTemplate>
+        </ItemsControl.ItemsPanel>
+
+        <ItemsControl.ItemTemplate>
+            <DataTemplate>
+                <Border BorderThickness="1" BorderBrush="Black">
+                </Border>
+            </DataTemplate>
+        </ItemsControl.ItemTemplate>
+
+    </ItemsControl>
 </UserControl>
