--- a/src/Cecs475.BoardGames.Chess.WpfView/ChessView.xaml
+++ b/src/Cecs475.BoardGames.Chess.WpfView/ChessView.xaml
@@ -9,12 +9,11 @@
     <UserControl.Resources>
         <local:ChessViewModel x:Key="vm"/>
         <local:ChessBackgroundConverter x:Key="BackgroundColor"/>
-        <local:ChessImageConverter x:Key="ChessImageConverter"/>
     </UserControl.Resources>
 
-
+    
     <ItemsControl x:Name="BoardPositions" DataContext="{StaticResource vm}"
-                  ItemsSource="{Binding ChessSquares}">
+                ItemsSource="{Binding ChessSquares}">
 
         <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
@@ -22,19 +21,25 @@
             </ItemsPanelTemplate>
         </ItemsControl.ItemsPanel>
 
+        <ItemsControl.Resources>
+            <local:ChessImageConverter x:Key="ChessImageConverter"/>
+        </ItemsControl.Resources>
+
         <ItemsControl.ItemTemplate>
             <DataTemplate>
                 <Border BorderThickness="1" BorderBrush="Black"
-                        MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave">
+                    MouseEnter="Border_MouseEnter" MouseUp="Border_MouseUp" MouseLeave="Border_MouseLeave">
+
                     <Border.Background>
                         <MultiBinding Converter="{StaticResource BackgroundColor}">
                             <Binding Path="Position"/>
                             <Binding Path="IsHighlighted"/>
+                            <Binding Path="IsSelected"/>
+                            <Binding Path="IsPossible"/>
+                            <Binding Path="IsCheck"/>
                         </MultiBinding>
                     </Border.Background>
                     <Image Source="{Binding chessPiece, Converter={StaticResource ChessImageConverter}}"/>
-
-                    <!--<ContentControl Content="{Binding chessPiece, Converter={StaticResource ChessImageConverter}}"/> -->
 
                     <!--<Image Source="{Binding chessPiece, Converter={StaticResource ChessImageConverter}}"/> -->
                 </Border>
