--- a/src/Cecs475.BoardGames.WpfApp/GameChoiceWindow.xaml
+++ b/src/Cecs475.BoardGames.WpfApp/GameChoiceWindow.xaml
@@ -5,9 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Cecs475.BoardGames.WpfApp"
         xmlns:view="clr-namespace:Cecs475.BoardGames.WpfView;assembly=Cecs475.BoardGames.WpfView"
-        xmlns:othello="clr-namespace:Cecs475.BoardGames.Othello.WpfView;assembly=Cecs475.BoardGames.Othello.WpfView"
-        xmlns:chess="clr-namespace:Cecs475.BoardGames.Chess.WpfView;assembly=Cecs475.BoardGames.Chess.WpfView"
-        xmlns:tictactoe="clr-namespace:Cecs475.BoardGames.TicTacToe.WpfView;assembly=Cecs475.BoardGames.TicTacToe.WpfView"
         mc:Ignorable="d"
         Title="Let's play a game!" Width="300" FontSize="16"
         SizeToContent="Height" WindowStartupLocation="CenterScreen">
@@ -19,7 +16,7 @@
         </StackPanel.Resources>
         <Label>Choose a game to play:</Label>
         <!-- Bind this ItemsControl to the array of known game types -->
-        <ItemsControl x:Name="GamesList" ItemsSource="{StaticResource GameTypes}">
+        <ItemsControl x:Name="GamesList" ItemsSource="{DynamicResource GameTypes}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Button Click="Button_Click" Content="{Binding GameName, Mode=OneTime}"/>
